--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.5.0",
+    "@types/readline-sync": "^1.4.8",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "commander": "^12.1.0"
+    "commander": "^12.1.0",
+    "readline-sync": "^1.4.10"
   }
 }
